; ModuleID = '/home/carl/AnghaBench/mongoose/examples/MSP432/ccs/MSP432_MG_hello/extr_MSP_EXP432P401R.c_MSP_EXP432P401R_initUART.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/MSP432/ccs/MSP432_MG_hello/extr_MSP_EXP432P401R.c_MSP_EXP432P401R_initUART.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPIO_PORT_P1 = common dso_local global i32 0, align 4
@GPIO_PIN2 = common dso_local global i32 0, align 4
@GPIO_PIN3 = common dso_local global i32 0, align 4
@GPIO_PRIMARY_MODULE_FUNCTION = common dso_local global i32 0, align 4
@GPIO_PORT_P3 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MSP_EXP432P401R_initUART() #0 {
  %1 = load i32, i32* @GPIO_PORT_P1, align 4
  %2 = load i32, i32* @GPIO_PIN2, align 4
  %3 = load i32, i32* @GPIO_PIN3, align 4
  %4 = or i32 %2, %3
  %5 = load i32, i32* @GPIO_PRIMARY_MODULE_FUNCTION, align 4
  %6 = call i32 @MAP_GPIO_setAsPeripheralModuleFunctionInputPin(i32 %1, i32 %4, i32 %5)
  %7 = load i32, i32* @GPIO_PORT_P3, align 4
  %8 = load i32, i32* @GPIO_PIN2, align 4
  %9 = load i32, i32* @GPIO_PIN3, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @GPIO_PRIMARY_MODULE_FUNCTION, align 4
  %12 = call i32 @MAP_GPIO_setAsPeripheralModuleFunctionInputPin(i32 %7, i32 %10, i32 %11)
  %13 = call i32 (...) @UART_init()
  ret void
}

declare dso_local i32 @MAP_GPIO_setAsPeripheralModuleFunctionInputPin(i32, i32, i32) #1

declare dso_local i32 @UART_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
